[package]
name = "ncplayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.13"
#id3 = "1.12.0"
#cpal = "0.9.0"
mp3-duration = "0.1.10"
#nscript = { git = "https://github.com/NickJasonHagen/nscript" }
#media = "0.25.0"
