[package]
name = "ncplayer"
version = "0.1.0"
edition = "2021"
authors = ["NickJasonHagen"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/NickJasonHagen/ncplayer"
repository = "https://github.com/NickJasonHagen/ncplayer"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.13"
mp3-duration = "0.1.10"

